workspace: move desktopResized after adding new outputs

Otherwise it crashes because the tile manager on the added outputs don't
exist yet

BUG: 462568